# ShibeOnline

./: .gitignore  Cargo.toml  LICENSE  README.md  Settings.toml  build.rs  log4rs.yaml
assets/css/: style.css
src/: controller.rs  images.rs  logger.rs  main.rs  rand_iter.rs
templates/: index.html
